Better fluidity, overflow off when controls are hidden and credits fix.

--- a/css/main.css
+++ b/css/main.css
@@ -53,8 +53,8 @@ canvas {
   width: 100% !important;
   height: 100% !important;
 }
-.pirate-pannel {
-  overflow-y: auto;
+.pirate-panel {
+  overflow-y: hidden;
   overflow-x: hidden;
   width: 18%;
   height: 100dvh;
@@ -67,14 +67,14 @@ canvas {
 .ARRRcontrols {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: clamp(0.4rem, 1.5dvh, 1.2rem);
   padding: 2rem;
   padding-bottom: 0.2rem;
   font-family: arial;
   color: #fff;
   font-size: 1rem;
   text-align: left;
-  height: 100%;
+  height: calc(100% - 2.2rem);
 }
 .ARRRcontrols > div:last-child {
   margin-top: auto;
@@ -98,10 +98,8 @@ canvas {
   position: relative;
   color: #16161e;
   background: #bb9645;
-  height: 3rem;
-  padding: 0.3rem;
-  padding-right: 0.5rem;
-  padding-bottom: 0.4rem;
+  height: 2.3rem;
+  padding: 0.3rem 0.6rem 0.3rem 0.4rem;
   margin-left: 1rem;
   top: -0.1rem;
   font-family: roboto;
@@ -126,14 +124,17 @@ canvas {
 .theme-controls {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: clamp(0.4rem, 1.5dvh, 1.2rem);
+  height: 0;
   opacity: 0;
   visibility: hidden;
+
   transform: translatex(-20rem);
   transition: opacity 0.5s ease, visibility 0.5s ease, transform 0.5s ease;
 }
 
 .theme-controls.show {
+  height: auto;
   opacity: 1;
   visibility: visible;
   transform: translatex(0);
@@ -307,7 +308,7 @@ button#copy {
   align-items: center;
   flex-direction: column;
   gap: 0.5rem;
-  background: #1e1e26;
+  background: rgb(34 34 47 / 44%);
   border-radius: 0.3rem;
   width: 100%;
   box-shadow: var(--pirate-bs-1);
@@ -425,6 +426,15 @@ label {
   margin-bottom: 0.3rem;
   color: var(--pirate-txt);
 }
+
+.pc-note-box {
+  display: flex;
+  flex-direction: column;
+  gap: clamp(0.4rem, 1.5dvh, 1.2rem);
+}
+.pc-note-box h3 {
+  margin-top: 0.5rem;
+}
 .pc-note {
   color: var(--pirate-txt);
   font-weight: 100;
@@ -473,7 +483,7 @@ canvas {
 }
 
 @media only screen and (max-width: 800px) {
-  .pirate-pannel {
+  .pirate-panel {
     display: none;
   }
 }
